feat: add parenteventid and return images in original size on the api (#1360)
* fix: npm run dev not working because of nodemon endless loop caused by new build
* feat: add parentEventId and return images in original size on the api
