# common/api/swagger.json
@@ -1442,6 +1442,9 @@
                       "type": "string",
                       "format": "date-time"
                     },
+                    "parentEventId": {
+                      "type": "string"
+                    },
                     "endTime": {
                       "type": "string",
                       "format": "date-time"
@@ -1557,6 +1560,7 @@
                     "venueStreet",
                     "venueName",
                     "participationUntil",
+                    "parentEventId",
                     "endTime",
                     "startTime",
                     "types",
@@ -1684,6 +1688,7 @@
                           "venueCity": "City of Happenings",
                           "venueZipCode": "12345",
                           "canceled": false,
+                          "parentEventId": "some-parent-event-id",
                           "areas": [
                             {
                               "area": {
@@ -1819,6 +1824,7 @@
                           "venueCity": null,
                           "venueZipCode": null,
                           "canceled": true,
+                          "parentEventId": null,
                           "areas": [],
                           "types": [],
                           "focuses": [],
